Fix buttons so the white corners are no long visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,7 @@ button {
     border: 0;
     color: #ffffff;
     padding: 0;
+    border-radius: 5px;
 }
 
 button a {
